--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SNC RECIPES</title>
     <link rel="stylesheet" href="css/index-styles.css" />
+    <script
+      src="https://kit.fontawesome.com/419cb35764.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <h1>SNC RECIPES</h1>
